--- a/src/style.css
+++ b/src/style.css
@@ -25,13 +25,16 @@
     grid-template-areas: 
       "main_header_section main_header_section"
       ". ."; 
-      margin: 0;
+    margin: 0;
+    height: 100vh;
 }
 
 .icon_text_center {
     align-items: center;
     gap: 6px;
 }
+
+
 
 /* Main Header */
 .main_header_section { 
@@ -53,13 +56,16 @@
     color: white;
 }
 
-    /* Left Side Navbar */
+
+
+/* Left Side Navbar */
 
 .left_side_navbar_section {
     background-color: #F7F7F7;
     padding: 30px 20px ;
     max-width: 350px;
-    border: 1px solid black;
+    height: 100%;
+    overflow: auto;
 }
 
 .left_side_navbar_list_all_titles {
@@ -72,6 +78,7 @@
     text-wrap: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    width: 80%;
 }
 
 .left_side_navbar_first_list, .left_side_navbar_second_list {
@@ -87,7 +94,8 @@
 }
 
 .left_side_navbar_list_titles {
-    border: 1px solid black;
+    background-color: white;
+    color: #696969;
 }
 
 .left_side_navbar_first_list_main_title, .left_side_navbar_second_list_main_title {
@@ -98,6 +106,10 @@
 
 .left_side_navbar_first_list {
     margin: 1px;
+}
+
+.left_side_navbar_first_list_titles {
+    width: 100%;
 }
 
         /* Second List Left Side Navbar */
@@ -119,29 +131,33 @@
 }
 
 
+
 /* Main Content Section */
 
 .main_content_section {
     padding: 13px 4em;
-    border: 1px solid black;
+    overflow: auto;
 }
 
 .main_content_section_main_title_container {
     justify-content: center;
-    border: 1px solid black;
+    font-size: 1.5rem;
+    max-height: 3em;
 }
 
     /* Main Content Section - Content  */
 
 .main_content_section_task_title {
     margin: 0;
+    padding-bottom: 10px;
+    font-size: 1.5rem;
+    border-bottom: 1px solid black;
 }
 
 .main_content_section_task_container {
     flex-direction: column;
     gap: 1em;
     padding: 2em;
-    border: 1px solid black;
 }
 
 .main_content_section_task_list_container {
@@ -152,19 +168,41 @@
 .main_content_section_individual_task {
     align-items: center;
     justify-content: space-between;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    border-bottom: 1px solid #e2e2e2;
 }
 
 .main_content_section_task_description_left {
     gap: 0.2em;
+    width: 70%;
+}
+
+.main_content_section_task_description_text {
+    width: 100%;
 }
 
 .main_content_section_task_description_right {
     align-items: center;
     gap: 0.7em;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    padding-right: 0.5em;
 }
 
 .main_content_section_task_description_right_icons {
     
+}
+
+
+
+/* Main Footer TO_REMOVE_LATER */
+.main_footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    font-size: 2rem;
+    width: 100%;
+    min-height: 1em;
+    border: 1px solid #ededed;
 }
