--- a/src/style.css
+++ b/src/style.css
@@ -160,6 +160,7 @@
 .main_content_section {
     padding: 13px 4em;
     overflow: auto;
+    color: #616161;
 }
 
 .main_content_section_main_title_container {
