--- a/src/style.css
+++ b/src/style.css
@@ -83,8 +83,8 @@
     color: var(--white);
 }
 
-.show_navbar_checkbox {
-    /* display: none; */
+.show_navbar_btn {
+    display: none;
 }
 
 /* Left Side Navbar */
@@ -432,6 +432,14 @@ dialog::backdrop {
     }
     .main_content_section { 
         grid-area: 2 / 1 / 3 / 3;
+    }
+
+    .show_navbar_btn {
+        display: contents;
+    }
+
+    .show_navbar_checkbox {
+        display: none;
     }
 
     /* Header */
